--- a/Fa/home-fa.html
+++ b/Fa/home-fa.html
@@ -14,7 +14,7 @@
   </video>
   
   <lang-picker>
-    <a href="../En/home.html">En</a>
+    <a href="../home.html">En</a>
     <a space-btw> / </a>
     <a href="../Fa/home-fa.html">فا</a>
   </lang-picker>
