--- a/Fa/staff-fa.html
+++ b/Fa/staff-fa.html
@@ -45,7 +45,7 @@
                 <div id="s7">
                   <div id="s8">
                     <lang-picker>
-                      <a href="../En/staff.html">En</a>
+                      <a href="../staff.html">En</a>
                       <a space-btw> / </a>
                       <a href="../Fa/staff-fa.html">فا</a>
                     </lang-picker>
