--- a/staff.html
+++ b/staff.html
@@ -11,7 +11,7 @@
 <body>
   <nav-bar id="mySidenav" name="III" onclick="this.classList.toggle('clicked')">
     <bar-btn href="javascript:void(0)" class="closebtn" onclick="closeNav()"></bar-btn>
-    <bar-btn btn1 btn-title="Home" onclick="document.location='home.html'"></bar-btn>
+    <bar-btn btn1 btn-title="Home" onclick="document.location='index.html'"></bar-btn>
     <bar-btn btn2 btn-title="Subjects"></bar-btn>
     <bar-btn btn3 btn-title="Activities"></bar-btn>
     <bar-btn btn4 btn-title="Staff" onclick="document.location='staff.html'"></bar-btn>
