no scroll staff page updated

--- a/Fa/staff-fa.html
+++ b/Fa/staff-fa.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Staff</title>
   <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="../styles/staff.css">
   <script type="text/javascript" src="../styles/style.js"></script>
 </head>
 <body class="farsi">
